# sharpemu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  HANDOFF.md  README.md  README_AI_DEBUGGING.md  REUSE.toml  SharpEmu.slnx  build-release.yml  testing_instructions.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: game-compatibility.yml
.github/workflows/: build-release.yml  notify-site.yml  pr-build-links.yml  pr_agent.yml  workflow.yml
LICENSES/: LicenseRef-Vecteezy-Free-License.txt
data/: ai-report-ppsa06328.json  ai-report-ppsa14677.json  crash-patterns.json  game-database.json  missing-nids.json
docs/: AI_DEBUG_PROMPT.md  ARCHITECTURE.md  Architecture.md  DEBUGGING.md  EventReference.md  HOW_TO_CREATE_PLUGIN.md  bink2-bridge.md  debugger-server.md  gc-region-range.md  guest-write-watch.md  headless-linux.md
native/bink2-bridge/: CMakeLists.txt  sharpemu_bink2_bridge.c
scripts/: RELEASE-USE.md  check_sysabi_aerolib.py  fetch-macos-moltenvk.sh  generate_aerolib_binary.py  release.py  test-linux-docker.sh  validate-synthetic-spirv.sh
scripts/tests/: test_release.py
src/Hyper5.Core/: packages.lock.json
src/Hyper5.GUI/: packages.lock.json
src/Hyper5.HLE/: packages.lock.json
src/Hyper5.Libs/: packages.lock.json
src/Hyper5.ShaderCompiler/: packages.lock.json
src/Hyper5.ShaderCompiler.Vulkan/: packages.lock.json
src/SharpEmu.CLI/: GuestAddressSpaceReservation.cs  NativeDebugger.cs  Program.cs  SharpEmu.CLI.csproj  app.manifest  packages.lock.json
src/SharpEmu.Core/: SharpEmu.Core.csproj  packages.lock.json
src/SharpEmu.DebugClient/: ClientEndpoint.cs  CommandTranslator.cs  DEVELOPER_READ.md  DebugClientConnection.cs  Program.cs  SharpEmu.DebugClient.csproj
src/SharpEmu.Debugger/: DebugRegisterFile.cs  DebugRegisterId.cs  DebuggerServerHost.cs  SharpEmu.Debugger.csproj
src/SharpEmu.Diagnostics/: AiReportGenerator.cs  ApiStateValidator.cs  BootDiagnostics.cs  DiagnosticConfig.cs  DiagnosticManager.cs  ImportLoopDetector.cs  MemoryRegionClassifier.cs  MissingNidReporter.cs  PointerOriginTracker.cs  ReturnAnalyzer.cs  SharpEmu.Diagnostics.csproj
src/SharpEmu.Diagnostics.Contracts/: DiagnosticAdapter.cs  DiagnosticsContracts.cs  IDiagnosticContext.cs  IDiagnosticEvent.cs  IDiagnosticPlugin.cs  PluginMetadata.cs  SharpEmu.Diagnostics.Contracts.csproj
src/SharpEmu.GUI/: App.axaml  App.axaml.cs  ConsoleWindow.cs  DiscordRichPresence.cs  EmulatorProcess.cs  GameEntry.cs  GameSurfaceHost.cs  GuiConsoleMirror.cs  GuiLauncher.cs  GuiSettings.cs  InputMappingWindow.axaml  InputMappingWindow.axaml.cs  Localization.cs  LogLine.cs  MainWindow.axaml  MainWindow.axaml.cs  PerGameSettings.cs  PerGameSettingsDialog.cs  Program.cs  SettingRow.cs  SharpEmu.GUI.csproj  Updater.cs  packages.lock.json
src/SharpEmu.GameContent/: GameFileEntry.cs  GameFileSystemMount.cs  GameMetadataReader.cs  GamePath.cs  GameSource.cs  GameSourceDiscovery.cs  IReadOnlyGameFileSystem.cs  PhysicalGameFileSystem.cs  SharpEmu.GameContent.csproj  ZArchiveFileSystem.cs
src/SharpEmu.HLE/: CpuContext.cs  GuestCStringAttribute.cs  GuestImageWriteTracker.cs  GuestPageProtection.cs  GuestThreadBlocking.cs  GuestThreadExecution.cs  GuestTlsTemplate.cs  GuestWriteWatch.cs  HleDataSymbols.cs  HostMainThread.cs  HostMemory.cs  HostSessionControl.cs  ICpuMemory.cs  ICpuMemoryWrapper.cs  IGuestAddressSpace.cs  IGuestMemoryAllocator.cs  IModuleManager.cs  ModuleManager.cs  OrbisGen2Result.cs  PreferredLanguages.cs  SharpEmu.HLE.csproj  packages.lock.json
src/SharpEmu.Libs/: CxxAbiExports.cs  HostTiming.cs  LibcInternalExports.cs  LibcStdioExports.cs  MessengerCompatExports.cs  SharpEmu.Libs.csproj  packages.lock.json
src/SharpEmu.Logging/: BuildInfo.cs  CollapsingTextWriter.cs  CompositeLogSink.cs  ConsoleLogSink.cs  FileLogSink.cs  HostSystemInfo.cs  SharpEmu.Logging.csproj  SharpEmuLog.cs  packages.lock.json
src/SharpEmu.ShaderCompiler/: Gen5GraphicsStage.cs  Gen5InlineConstants.cs  Gen5ShaderIr.cs  Gen5ShaderMetadataReader.cs  Gen5ShaderScalarEvaluator.cs  Gen5ShaderTranslator.cs  Gen5UnifiedFormat.cs  Gfx10UnifiedFormat.cs  GuestDrawKind.cs  SharpEmu.ShaderCompiler.csproj  packages.lock.json
src/SharpEmu.ShaderCompiler.Metal/: Gen5MslShader.cs  Gen5MslTranslator.Alu.cs  Gen5MslTranslator.Pixel.cs  Gen5MslTranslator.cs  MslFixedShaders.cs  MslTemplates.cs  SharpEmu.ShaderCompiler.Metal.csproj
src/SharpEmu.ShaderCompiler.Vulkan/: Gen5SpirvShader.cs  Gen5SpirvTranslator.Alu.cs  Gen5SpirvTranslator.cs  SharpEmu.ShaderCompiler.Vulkan.csproj  SpirvFixedShaders.cs  SpirvModuleBuilder.cs  packages.lock.json
src/SharpEmu.SourceGenerators/: GenerateAerolibBinaryTask.cs  Ps5Nid.cs  SharpEmu.SourceGenerators.csproj  SysAbiDiagnostics.cs  SysAbiExportAnalyzer.cs  SysAbiExportGenerator.cs  SysAbiExportShape.cs  packages.lock.json
tests/SharpEmu.CLI.Tests/: DiagnosticReportIntegrationTests.cs  SharpEmu.CLI.Tests.csproj  packages.lock.json
tests/SharpEmu.Debugger.Tests/: BreakpointStoreTests.cs  DebugCommandDispatcherTests.cs  DebugRequestTests.cs  FakeDebuggerSession.cs  SharpEmu.Debugger.Tests.csproj
tests/SharpEmu.Diagnostics.Tests/: DiagnosticConfigTests.cs  EventBusTests.cs  RingBufferTests.cs  SharpEmu.Diagnostics.Tests.csproj
tests/SharpEmu.Libs.Tests/: AerolibCatalogTests.cs  FakeCpuMemory.cs  MessengerCompatExportsTests.cs  SaveDataStorageTests.cs  SharpEmu.Libs.Tests.csproj  Sse4aExtrqBlendPatchTests.cs  SysAbiRegistryParityTests.cs  SysAbiRegistryTests.cs  packages.lock.json
tests/SharpEmu.ShaderCompiler.Tests/: Gen5ImageTests.cs  (+4 more)
(+522 files in other folders)
